# axon

./: ISSUES.md  README.md  pyproject.toml
.github/workflows/: publish.yml
src/axon/: __init__.py
src/axon/cli/: main.py
src/axon/config/: __init__.py  ignore.py  languages.py
src/axon/core/: diff.py
src/axon/core/embeddings/: embedder.py  text.py
src/axon/core/graph/: graph.py  model.py
src/axon/core/ingestion/: calls.py  community.py  coupling.py  dead_code.py  heritage.py  imports.py  parser_phase.py  pipeline.py  processes.py  structure.py  symbol_lookup.py  types.py  walker.py  watcher.py
src/axon/core/parsers/: base.py  csharp.py  python_lang.py  typescript.py
src/axon/core/search/: hybrid.py
src/axon/core/storage/: base.py  kuzu_backend.py
src/axon/mcp/: resources.py  server.py  tools.py
tests/cli/: test_main.py
tests/core/: test_calls.py  test_community.py  test_config.py  test_coupling.py  test_dead_code.py  test_diff.py  test_embedder.py  test_embedding_text.py  test_graph.py  test_graph_model.py  test_heritage.py  test_hybrid_search.py  test_imports.py  test_kuzu_backend.py  test_kuzu_search.py  test_parser_csharp.py  test_parser_phase.py  test_parser_python.py  test_parser_typescript.py  test_pipeline.py  test_processes.py  test_storage_base.py  test_structure.py  test_types.py  test_walker.py  test_watcher.py
tests/e2e/: test_full_pipeline.py
tests/mcp/: test_tools.py
